deployment.yml
apiVersion: apps/v1beta1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: spring-boot-deployment
spec:
  selector:
    matchLabels:
      app: spring-boot-app
  replicas: 3 # tells deployment to run 3 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: spring-boot-app
    spec:
      containers:
        - name: spring-boot-app
          image: com.fsistemas/dockerboot-demo
          ports:
            - containerPort: 8080
              name: server
            - containerPort: 8081
              name: management
          livenessProbe:
            httpGet:
              path: /health-check
              port: 8080
