service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: http
    - port: 8081
      targetPort: 8081
      name: management
  selector:
    app: spring-boot-app
  type: NodePort
